Arregle carpeta de entitys y errores